fix audio icon overflow

--- a/webroot/css/sentences/add.css
+++ b/webroot/css/sentences/add.css
@@ -55,3 +55,6 @@
 #main_content{
     margin-right:0;
 }
+.sentence .content.column {
+    width: 500px;
+}
